Better deck building experience
